--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13"
